fix error: main image not showing in github pages - attempt 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 .bg-image {
-    background: url('./media/images/lighbulb-bg.jpg') no-repeat center center fixed;
+    background: url('../images/lighbulb-bg.jpg') no-repeat center center fixed;
     background-size: cover;
     min-height: 60vh;
     min-width: 100vw;
